--- a/css/style.css
+++ b/css/style.css
@@ -9,10 +9,6 @@ p {
 	font-weight: bold;
 }
 
-main {
-	text-align: center;
-}
-
 /* Centered Div using flexbox */
 .mdl-layout-title {
 	display: flex;
@@ -28,17 +24,6 @@ h3 {
   padding: 20px;
 }
 
-main {
-	text-align: center;
-	font-weight: bold;
-}
-
-#toppings {
-  display: flex;
-  justify-content: center;
-	align-items: center;
-}
-
 .center {
   margin-left: auto;
   margin-right: auto;
@@ -52,16 +37,19 @@ h4 {
   margin-right: 10%;
   font-weight: bold;
 }
+
 .table {
   border-collapse: collapse;
   font-weight: bold;
 }
 
-.menu{
+.menu {
   border: 1px solid black;
   text-align: left;
   padding: 8px;
 }
+
+/* Image resizing */
 
 .popcorn {
   height: 200px;
